Fix: nav buttons, visible nav, banner color, challenges page css, errors in form validation

--- a/src/styles.css
+++ b/src/styles.css
@@ -669,7 +669,7 @@ form > span {
 
 #jumbo-image {
   max-height: 20rem;
-  /* TODO: Invert banner colors using CSS */
+  filter: invert(100%);
 }
 
 @media (max-width: 600px) {
@@ -703,6 +703,10 @@ form > span {
   .dropdown-click.mobile .btn,
   .dropdown-click.mobile .button {
     width: 100%;
+  }
+  #nav-challenges,
+  #nav-signup {
+    display: none;
   }
 }
 @media (max-width: 768px) {
@@ -874,14 +878,13 @@ form > span {
   font-size: 16px;
 }
 
-#challenge-grid {
-  display: grid;
-  /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
-  grid-template-columns: none;
-  grid-auto-rows: 10rem;
-  gap: 1rem;
-  padding-top: 2rem;
-}
+  #challenge-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 10rem;
+    gap: 1rem;
+    padding-top: 2rem;
+  }
 
 .code {
   width: auto;
